2020-08-17  JMB  More Android build updates

    Got the Android version of PortaBase built by Qt 5.15.0 working.
    Required updates to the APK template and QQFileDialog, fixing a
    bug in a recent .pro file update, and adding a runtime permissions
    request.

2020-08-04  JMB  Fixed color bugs in dark mode

    Fixed some problems with the row viewer dialog and calculator
    dialog which made parts of them difficult or impossible to read
    under certain system themes (like macOS dark mode).

2020-08-02  JMB  Updated Android packaging

    Added support for building PortaBase for Android with Qt 5.15.0, and
    documented how to do it.

2020-06-08  JMB  Updated Windows packaging

    Updated the Windows build scripts to work with recent versions of
    Windows, Qt, Inno Setup, and Python.

2020-06-06  JMB  More Debian package updates

    Fixed all issues reported by lintian for the generated package.

2020-05-31  JMB  Updated Debian packaging

    Updated the Debian packaging to comply with the latest version of the
    Debian Maintainer's Guide and incorporate much of the work done by
    Dmitry Smirnov for the official Debian package.

2020-05-25  JMB  Support row colors with alpha, updated Mac build script

    Added support for alternating row colors with an alpha channel for
    transparency (like the defaults for macOS dark mode), and updated the
    macOS build scripts to work with recent Qt and Xcode releases.

2020-05-23  JMB  Updated French and Italian translations

    Updated these translations based on recent work done by Dany Poupard
    and Maurizio Codogno in Transifex.

2020-05-11  JMB  Fixed bug in Mac toolbar customization

    Fixed a bug in saving Mac toolbar content customization that was
    implemented in 2016.  This never made it into a downloadable Mac
    binary, so I suspect very few people were affected.

2017-12-13  JMB  Fix modification tracking in column statistics dialog
